<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pupify</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="header_edit_domestic">Edit Domestic Dog</string>
    <string name="header_edit_stray">Edit Stray Dog</string>
    <string name="header_stray">Add Stray Dog</string>
    <string name="choose_report">Choose report type</string>
    <string name="report_1">Province</string>
    <string name="report_2">Region</string>
    <string name="report_3">Export Data</string>
    <string name="selectprovince">Choose a Province</string>
    <string name="editdogprofilebutton">Profile</string>
    <string name="editdogvaccinebutton">Edit Vaccine</string>
    <string name="addvaccinetitle" tools:ignore="ExtraTranslation">Add Vaccine</string>
    <string name="addmessage">Are you sure to add this vaccine?</string>
    <string name="edit">Edit</string>
    <string name="editdog">Edit Dog Info</string>
    <string name="latestvaccine">Latest Added Vaccines</string>
    <string name="type">Type</string>
    <string name="submitdate">Submitted Date</string>
    <string name="sterilizedlabel">Sterilized</string>
    <string name="dogprofilename">Your Dog Name</string>
    <string name="profile">Profile</string>
    <string name="picmissing">Picture Missing!</string>
    <string name="picmissingmessage" tools:ignore="ExtraTranslation">Please upload picture to the form before continue</string>
    <string name="editvaccine">Edit Vaccine</string>
    <string name="editvaccinemessage">Are you sure to edit this info?</string>
    <string name="delete">Del</string>
    <string name="header_mandatory">Add Domestic Dog</string>
    <string name="header_optional">Dog Info (optional)</string>
    <string name="age_label">Age (years)</string>
    <string name="age_hint">Enter your puppy\'s age (years)</string>
    <string name="color_label">Color</string>
    <string name="color_hint">Enter your puppy\'s color</string>
    <string name="breed_label">Breed</string>
    <string name="breed_hint">Enter your puppy\'s breed</string>
    <string name="sterilization_label">Have your puppy been sterilized?</string>
    <string name="not_sterilized">Not yet</string>
    <string name="sterilized_date_label">Sterilized Date</string>
    <string name="dogmale">Male</string>
    <string name="header_vaccine">Vaccine</string>
    <string name="rabies_vaccine">Rabies Vaccine</string>
    <string name="other">Others</string>
    <string name="addvaccine">Add Vaccine</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="vaccine">Vaccine :</string>
    <string name="vaccine_date">Injected on :</string>
    <string name="dogfemale">Female</string>
    <string name="gender">Gender</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dogaddress">Do you want to apply your address as dog\'s address?</string>
    <string name="dogname">Name</string>
    <string name="dogname_hint">Enter your puppy\'s name</string>
    <string name="nextandaccept">Accept and Continue</string>
    <string name="done">Done</string>
    <string name="declineandnext">Decline and Continue</string>
    <string name="chooseprovince">Choose a province</string>
    <string name="radio_user">User</string>
    <string name="radio_admin">Admin</string>
    <string name="usernameLogin">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="application_logo_description">This is a logo for Pupify application</string>
    <string name="firstNameLabel">First Name</string>
    <string name="firstNameHint">Enter your first name</string>
    <string name="lastNameHint">Enter your last name</string>
    <string name="lastNameLabel">Last name</string>
    <string name="emailLabel">Email</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="repasswordLabel">Re-password</string>
    <string name="repasswordHint">Enter your password again</string>
    <string name="nextButton">Next</string>
    <string name="registrationHeader">Registeration</string>
    <string name="phoneLabel">Phone</string>
    <string name="phoneHint">Enter number only</string>
    <string name="addressLabel">Address</string>
    <string name="subdistrictLabel">Subdistrict</string>
    <string name="districtLabel">District</string>
    <string name="provinceLabel">Province</string>
    <string name="registrationHeader2">Registration (Optional)</string>
    <string-array name="provinceList">
        <item>Bangkok</item>
        <item>Krabi</item>
        <item>Kanchanaburi</item>
        <item>Kalasin</item>
        <item>Kamphaeng Phet</item>
        <item>Khon Kaen</item>
        <item>Chanthaburi</item>
        <item>Chachoengsao</item>
        <item>Chon Buri</item>
        <item>Chai Nat</item>
        <item>Chaiyaphum</item>
        <item>Chumphon</item>
        <item>Chiang Rai</item>
        <item>Chiang Mai</item>
        <item>Trang</item>
        <item>Trat</item>
        <item>Tak</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nakhon Phanom</item>
        <item>Nakhon Ratchasima</item>
        <item>Nakhon Si Thammarat</item>
        <item>Nakhon Sawan</item>
        <item>Nonthaburi</item>
        <item>Narathiwat</item>
        <item>Nan</item>
        <item>Bueng Kan</item>
        <item>Buri Ram</item>
        <item>Pathum Thani</item>
        <item>Prachuap Khiri Khan</item>
        <item>Prachinburi</item>
        <item>Pattani</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Phang Nga</item>
        <item>Phichit</item>
        <item>Phatthalung</item>
        <item>Phitsanulok</item>
        <item>Phetchaburi</item>
        <item>Phetchabun</item>
        <item>Phrae</item>
        <item>Phayao</item>
        <item>Phuket</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Mae Hong Son</item>
        <item>Yala</item>
        <item>Yasothon</item>
        <item>Roi Et</item>
        <item>Ranong</item>
        <item>Rayong</item>
        <item>Ratchaburi</item>
        <item>Lop Buri</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Loei</item>
        <item>Sisaket</item>
        <item>Sakon Nakhon</item>
        <item>Songkhla</item>
        <item>Satun</item>
        <item>Samut Prakan</item>
        <item>Samut Songkhram</item>
        <item>Samut Sakhon</item>
        <item>Sa Kaeo</item>
        <item>Saraburi</item>
        <item>Sing Buri</item>
        <item>Sukhothai</item>
        <item>Suphan Buri</item>
        <item>Surat Thani</item>
        <item>Surin</item>
        <item>Nong Khai</item>
        <item>Nong Bua Lam Phu</item>
        <item>Ang Thong</item>
        <item>Udon Thani</item>
        <item>Uthai Thani</item>
        <item>Uttaradit</item>
        <item>Ubon Ratchathani</item>
        <item>Amnat Charoen</item>
    </string-array>
    <string-array name="provinceListTHEN">
        <item>Bangkok</item>
        <item>Krabi</item>
        <item>Kanchanaburi</item>
        <item>Kalasin</item>
        <item>Kamphaeng Phet</item>
        <item>Khon Kaen</item>
        <item>Chanthaburi</item>
        <item>Chachoengsao</item>
        <item>Chon Buri</item>
        <item>Chai Nat</item>
        <item>Chaiyaphum</item>
        <item>Chumphon</item>
        <item>Chiang Rai</item>
        <item>Chiang Mai</item>
        <item>Trang</item>
        <item>Trat</item>
        <item>Tak</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nakhon Phanom</item>
        <item>Nakhon Ratchasima</item>
        <item>Nakhon Si Thammarat</item>
        <item>Nakhon Sawan</item>
        <item>Nonthaburi</item>
        <item>Narathiwat</item>
        <item>Nan</item>
        <item>Bueng Kan</item>
        <item>Buri Ram</item>
        <item>Pathum Thani</item>
        <item>Prachuap Khiri Khan</item>
        <item>Prachinburi</item>
        <item>Pattani</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Phang Nga</item>
        <item>Phichit</item>
        <item>Phatthalung</item>
        <item>Phitsanulok</item>
        <item>Phetchaburi</item>
        <item>Phetchabun</item>
        <item>Phrae</item>
        <item>Phayao</item>
        <item>Phuket</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Mae Hong Son</item>
        <item>Yala</item>
        <item>Yasothon</item>
        <item>Roi Et</item>
        <item>Ranong</item>
        <item>Rayong</item>
        <item>Ratchaburi</item>
        <item>Lop Buri</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Loei</item>
        <item>Sisaket</item>
        <item>Sakon Nakhon</item>
        <item>Songkhla</item>
        <item>Satun</item>
        <item>Samut Prakan</item>
        <item>Samut Songkhram</item>
        <item>Samut Sakhon</item>
        <item>Sa Kaeo</item>
        <item>Saraburi</item>
        <item>Sing Buri</item>
        <item>Sukhothai</item>
        <item>Suphan Buri</item>
        <item>Surat Thani</item>
        <item>Surin</item>
        <item>Nong Khai</item>
        <item>Nong Bua Lam Phu</item>
        <item>Ang Thong</item>
        <item>Udon Thani</item>
        <item>Uthai Thani</item>
        <item>Uttaradit</item>
        <item>Ubon Ratchathani</item>
        <item>Amnat Charoen</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="secure_question">Security Question</string>
    <string name="secure_answer">Enter your answer</string>
    <string name="usernameLabel">Username (English)</string>
    <string name="usernameHint">Enter your username</string>
    <string name="forgotPasswordHeader">Forgot Password</string>
    <string name="newPasswordHint">Enter your new password</string>
    <string name="re_newPasswordHint">Enter your new password again</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="report">Information Report</string>
    <string name="setting">Setting</string>
    <string name="logout">Sign out</string>
    <string name="sterilized">Already</string>
</resources>