<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_chrome_reader_mode_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/baseline_assignment_black_24dp"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
